fixed spacing header

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,20 @@
 header {
-    height:7rem;
+    height:5rem;
     margin: -10px;
     display: flex;
     justify-content: space-between;
-    
+    align-items: center;
+    background-color: rgb(46, 24, 102);
 }
 #logo {
     height: 5rem;
     padding: 5px;
 }
-a {
-    padding: 10px;
+
+header > div {
+    display: flex;
+    height: 5rem;
+    width: 15rem;
+    justify-content: space-evenly;
+    align-items: center;
 }
